--- a/app.css
+++ b/app.css
@@ -1,5 +1,7 @@
 body {
     background-color: #2c3e50;
+    /* height: 100%;
+    width: 100%; */
     padding: 100px;
     text-align: center;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
@@ -20,11 +22,13 @@ h1:hover {
 
 ul {
     list-style-type: none;
+    margin-top: 80px;
     margin-left: -45px;
 }
 
 li {
     display: inline-block;
+    margin: 5px;
 }
 
 p{
@@ -51,10 +55,10 @@ p{
 }
 
 .main {
-    padding:40px 10px 5px;
-    height: 520px;
+    padding:40px 20px 10px;
+    height: 400px;
     width: 700px;
     background-color: #ecf0f1;
     margin: auto;
-    border-radius: 30px;
+    border-radius: 50px;
 }
