--- a/app.css
+++ b/app.css
@@ -1,5 +1,6 @@
 body {
-    background-color: #2c3e50;
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 10%, rgba(44,62,80,1) 37%, rgba(7,145,124,1) 74%, rgba(0,255,115,1) 100%);
     /* height: 100%;
     width: 100%; */
     padding: 100px;
@@ -22,7 +23,7 @@ h1:hover {
 
 ul {
     list-style-type: none;
-    margin-top: 80px;
+    margin-top: 30px;
     margin-left: -45px;
 }
 
@@ -50,7 +51,7 @@ p{
     margin-left: auto;
     margin-right: auto;
     border-radius: 100px;
-    height: 150px;
+    height: 200px;
     width: 150px;
 }
 
